--- a/Dataframe_With_Weather.ipynb
+++ b/Dataframe_With_Weather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,43 +412,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%\n",
-    "# Dependencies\n",
-    "import requests\n",
-    "import json\n",
-    "from pprint import pprint\n",
+    "# #%%\n",
+    "# # Dependencies\n",
+    "# import requests\n",
+    "# import json\n",
+    "# from pprint import pprint\n",
     "\n",
-    "# Get API Key\n",
-    "from config import wolfram_api_key\n",
+    "# # Get API Key\n",
+    "# from config import wolfram_api_key\n",
     "\n",
-    "url = \"https://api.wolframalpha.com/v2/query?format=plaintext&output=JSON&input=\"\n",
+    "# url = \"https://api.wolframalpha.com/v2/query?format=plaintext&output=JSON&input=\"\n",
     "\n",
-    "#%%\n",
-    "# City and query\n",
-    "city = \"Raleigh+NC\"\n",
-    "query = \"average+temperature+for+\" + city + \"+past+ten+years\"\n",
+    "# #%%\n",
+    "# # City and query\n",
+    "# city = \"Raleigh+NC\"\n",
+    "# query = \"average+temperature+for+\" + city + \"+past+ten+years\"\n",
     "\n",
-    "# Build query URL\n",
-    "query_url = url + query + \"&appid=\" + wolfram_api_key\n",
-    "# Do not print to GitHub\n",
-    "# print(query_url)\n",
+    "# # Build query URL\n",
+    "# query_url = url + query + \"&appid=\" + wolfram_api_key\n",
+    "# # Do not print to GitHub\n",
+    "# # print(query_url)\n",
     "\n",
-    "#%%\n",
-    "# Request Weather\n",
-    "weather = requests.get(query_url).json()\n",
+    "# #%%\n",
+    "# # Request Weather\n",
+    "# weather = requests.get(query_url).json()\n",
     "\n",
-    "# Print the json\n",
-    "# print(weather)\n",
+    "# # Print the json\n",
+    "# # print(weather)\n",
     "\n",
-    "#%%\n",
-    "# Print the json (pretty printed)\n",
-    "# print(json.dumps(weather, indent=4, sort_keys=True))\n",
+    "# #%%\n",
+    "# # Print the json (pretty printed)\n",
+    "# # print(json.dumps(weather, indent=4, sort_keys=True))\n",
     "\n",
-    "#%%\n",
-    "# Get Average Temp\n",
-    "avg_temp = weather[\"queryresult\"][\"pods\"][1][\"subpods\"][0][\"plaintext\"]\n",
-    "# print(avg_temp)\n",
-    "temp_string = weather[\"queryresult\"][\"pods\"][2][\"subpods\"][0][\"plaintext\"]\n",
+    "# #%%\n",
+    "# # Get Average Temp\n",
+    "# avg_temp = weather[\"queryresult\"][\"pods\"][1][\"subpods\"][0][\"plaintext\"]\n",
+    "# # print(avg_temp)\n",
+    "# temp_string = weather[\"queryresult\"][\"pods\"][2][\"subpods\"][0][\"plaintext\"]\n",
     "# print(temp_string)"
    ]
   },
@@ -471,41 +471,41 @@
     }
    ],
    "source": [
-    "# Split the String\n",
+    "# # Split the String\n",
     "\n",
-    "# Overall Average Temp\n",
-    "avg_temp_clean = int(avg_temp.split(\" °F\")[0])\n",
-    "print(f\"The avg_temp_clean variable = {avg_temp_clean}\")\n",
+    "# # Overall Average Temp\n",
+    "# avg_temp_clean = int(avg_temp.split(\" °F\")[0])\n",
+    "# print(f\"The avg_temp_clean variable = {avg_temp_clean}\")\n",
     "\n",
-    "# Historic Low Temp\n",
-    "temp_low = temp_string.split(\" | \")[2]\n",
-    "temp_low = temp_low.split(\"low: \")[1]\n",
-    "temp_low = int(temp_low.split(\" °F\")[0])\n",
-    "print(f\"The temp_low variable = {temp_low}\")\n",
-    "# print(\"\")\n",
+    "# # Historic Low Temp\n",
+    "# temp_low = temp_string.split(\" | \")[2]\n",
+    "# temp_low = temp_low.split(\"low: \")[1]\n",
+    "# temp_low = int(temp_low.split(\" °F\")[0])\n",
+    "# print(f\"The temp_low variable = {temp_low}\")\n",
+    "# # print(\"\")\n",
     "\n",
-    "# Average High Temp\n",
-    "temp_avghigh = temp_string.split(\" | \")[4]\n",
-    "temp_avghigh = int(temp_avghigh.split(\" °F\")[0])\n",
-    "print(f\"The temp_avghigh variable = {temp_avghigh}\")\n",
-    "# print(\"\")\n",
+    "# # Average High Temp\n",
+    "# temp_avghigh = temp_string.split(\" | \")[4]\n",
+    "# temp_avghigh = int(temp_avghigh.split(\" °F\")[0])\n",
+    "# print(f\"The temp_avghigh variable = {temp_avghigh}\")\n",
+    "# # print(\"\")\n",
     "\n",
-    "# Average Low Temp\n",
-    "temp_avglow = temp_string.split(\" | \")[5]\n",
-    "temp_avglow = int(temp_avglow.split(\" °F\")[0])\n",
-    "print(f\"the temp_avglow variable = {temp_avglow}\")\n",
-    "# print(\"\")\n",
+    "# # Average Low Temp\n",
+    "# temp_avglow = temp_string.split(\" | \")[5]\n",
+    "# temp_avglow = int(temp_avglow.split(\" °F\")[0])\n",
+    "# print(f\"the temp_avglow variable = {temp_avglow}\")\n",
+    "# # print(\"\")\n",
     "\n",
-    "# Historic High Temp\n",
-    "temp_high = temp_string.split(\" | \")[6]\n",
-    "temp_high = temp_high.split(\"high: \")[1]\n",
-    "temp_high = int(temp_high.split(\" °F\")[0])\n",
-    "print(f\"The temp_high variable = {temp_high}\")\n",
-    "# print(\"\")\n",
+    "# # Historic High Temp\n",
+    "# temp_high = temp_string.split(\" | \")[6]\n",
+    "# temp_high = temp_high.split(\"high: \")[1]\n",
+    "# temp_high = int(temp_high.split(\" °F\")[0])\n",
+    "# print(f\"The temp_high variable = {temp_high}\")\n",
+    "# # print(\"\")\n",
     "\n",
-    "# Temperature Range\n",
-    "average_temp_range = temp_avghigh - temp_avglow\n",
-    "print(f\"The range in average temp = {average_temp_range}\")"
+    "# # Temperature Range\n",
+    "# average_temp_range = temp_avghigh - temp_avglow\n",
+    "# print(f\"The range in average temp = {average_temp_range}\")"
    ]
   },
   {
@@ -551,7 +551,7 @@
     "temp_avghigh_list = []\n",
     "temp_avglow_list = []\n",
     "temp_high_list = []\n",
-    "average_temp_range_list = []\n",
+    "# average_temp_range_list = []\n",
     "\n",
     "for index, row in just_cities_head.iterrows():\n",
     "    city_query = row['CityName']\n",
@@ -607,7 +607,151 @@
     "print(temp_avghigh_list)\n",
     "print(temp_avglow_list)\n",
     "print(temp_high_list)\n",
-    "print(average_temp_range_list)"
+    "# print(average_temp_range_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Census Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from census import Census\n",
+    "from us import states\n",
+    "import gmaps\n",
+    "\n",
+    "# Census & gmaps API Keys\n",
+    "from config import (census_api_key, gkey)\n",
+    "c = Census(census_api_key, year=2013)\n",
+    "\n",
+    "# Configure gmaps\n",
+    "gmaps.configure(api_key=gkey)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is Available\n",
+    "# pprint(c.acs5.tables())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Figuring out CityFIPS\n",
+    "# US places\n",
+    "# (example: Fresno city in California is \"27000\", or prefixed with the state code \"0627000\")\n",
+    "# state_place(fields, state_fips, place)\n",
+    "\n",
+    "\n",
+    "# Address\t2630 CAHABA RD, BIRMINGHAM, AL, 35223\n",
+    "# MSA/MD Code\t13820\n",
+    "# State Code\t01\n",
+    "# County Code\t073\n",
+    "# Tract Code\t0108.02\n",
+    "# MSA/MD Name\tBIRMINGHAM-HOOVER, AL\n",
+    "# State Name\tALABAMA\n",
+    "# County Name\tJEFFERSON COUNTY\n",
+    "\n",
+    "# In the CSV = 0107000-01073010802\n",
+    "# so State code = 01, Place Code = 07000\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# state_county_tract Specification\n",
+    "state_county_tract(fields, state_fips, county_fips, tract)\n",
+    "\n",
+    "#The geographic name for all census tracts for county 170 in Alaska:\n",
+    "c.sf1.get('NAME', geo={'for': 'tract:*',\n",
+    "                       'in': 'state:{} county:170'.format(states.AK.fips)})\n",
+    "\n",
+    "#The same call using the state_county_tract convenience method:\n",
+    "c.sf1.state_county_tract('NAME', states.AK.fips, '170', Census.ALL)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "state_place(fields, state_fips, place)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'NAME': 'Birmingham city, Alabama', 'state': '01', 'place': '07000'}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "census_data_test = c.acs5.state_place('NAME',states.AL.fips,'07000')\n",
+    "census_pd_test = pd.DataFrame(census_data_test)\n",
+    "census_data_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run Census Search to retrieve data on all states\n",
+    "# Note the addition of \"B23025_005E\" for unemployment count\n",
+    "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
+    "                          \"B19301_001E\",\n",
+    "                          \"B17001_002E\",\n",
+    "                          \"B23025_005E\"), {'for': 'state:*'})\n",
+    "\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "census_pd = pd.DataFrame(census_data)\n",
+    "\n",
+    "# Column Reordering\n",
+    "census_pd = census_pd.rename(columns={\"B01003_001E\": \"Population\",\n",
+    "                                      \"B01002_001E\": \"Median Age\",\n",
+    "                                      \"B19013_001E\": \"Household Income\",\n",
+    "                                      \"B19301_001E\": \"Per Capita Income\",\n",
+    "                                      \"B17001_002E\": \"Poverty Count\",\n",
+    "                                      \"B23025_005E\": \"Unemployment Count\",\n",
+    "                                      \"NAME\": \"Name\", \"state\": \"State\"})\n",
+    "\n",
+    "# Add in Poverty Rate (Poverty Count / Population)\n",
+    "census_pd[\"Poverty Rate\"] = 100 * \\\n",
+    "    census_pd[\"Poverty Count\"].astype(\n",
+    "        int) / census_pd[\"Population\"].astype(int)\n",
+    "\n",
+    "# Add in Employment Rate (Employment Count / Population)\n",
+    "census_pd[\"Unemployment Rate\"] = 100 * \\\n",
+    "    census_pd[\"Unemployment Count\"].astype(\n",
+    "        int) / census_pd[\"Population\"].astype(int)\n",
+    "\n",
+    "# Final DataFrame\n",
+    "census_pd = census_pd[[\"State\", \"Name\", \"Population\", \"Median Age\", \"Household Income\",\n",
+    "                       \"Per Capita Income\", \"Poverty Count\", \"Poverty Rate\", \"Unemployment Rate\"]]\n",
+    "\n",
+    "census_pd.head()"
    ]
   }
  ],
