census data working

--- a/Dataframe_With_Weather.ipynb
+++ b/Dataframe_With_Weather.ipynb
@@ -673,60 +673,101 @@
     "\n",
     "\n",
     "\n",
-    "# state_county_tract Specification\n",
-    "state_county_tract(fields, state_fips, county_fips, tract)\n",
+    "# # state_county_tract Specification\n",
+    "# state_county_tract(fields, state_fips, county_fips, tract)\n",
     "\n",
-    "#The geographic name for all census tracts for county 170 in Alaska:\n",
-    "c.sf1.get('NAME', geo={'for': 'tract:*',\n",
-    "                       'in': 'state:{} county:170'.format(states.AK.fips)})\n",
+    "# #The geographic name for all census tracts for county 170 in Alaska:\n",
+    "# c.sf1.get('NAME', geo={'for': 'tract:*',\n",
+    "#                        'in': 'state:{} county:170'.format(states.AK.fips)})\n",
     "\n",
-    "#The same call using the state_county_tract convenience method:\n",
-    "c.sf1.state_county_tract('NAME', states.AK.fips, '170', Census.ALL)\n",
-    "\n",
-    "\n",
+    "# #The same call using the state_county_tract convenience method:\n",
+    "# c.sf1.state_county_tract('NAME', states.AK.fips, '170', Census.ALL)\n",
     "\n",
     "\n",
-    "state_place(fields, state_fips, place)\n"
+    "\n",
+    "# #The Format To Use\n",
+    "# state_place(fields, state_fips, place)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Median Age</th>\n",
+       "      <th>Household Income</th>\n",
+       "      <th>Per Capita Income</th>\n",
+       "      <th>Poverty Count</th>\n",
+       "      <th>Poverty Rate</th>\n",
+       "      <th>Unemployment Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01</td>\n",
+       "      <td>Birmingham city, Alabama</td>\n",
+       "      <td>212295.0</td>\n",
+       "      <td>35.9</td>\n",
+       "      <td>31445.0</td>\n",
+       "      <td>19650.0</td>\n",
+       "      <td>62258.0</td>\n",
+       "      <td>29.326173</td>\n",
+       "      <td>7.252644</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[{'NAME': 'Birmingham city, Alabama', 'state': '01', 'place': '07000'}]"
+       "  State                      Name  Population  Median Age  Household Income  \\\n",
+       "0    01  Birmingham city, Alabama    212295.0        35.9           31445.0   \n",
+       "\n",
+       "   Per Capita Income  Poverty Count  Poverty Rate  Unemployment Rate  \n",
+       "0            19650.0        62258.0     29.326173           7.252644  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "census_data_test = c.acs5.state_place('NAME',states.AL.fips,'07000')\n",
-    "census_pd_test = pd.DataFrame(census_data_test)\n",
-    "census_data_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run Census Search to retrieve data on all states\n",
-    "# Note the addition of \"B23025_005E\" for unemployment count\n",
-    "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
+    "census_data_test_single = c.acs5.state_place('NAME','01','07000')\n",
+    "census_pd_test = pd.DataFrame(census_data_test_single)\n",
+    "\n",
+    "census_data_test = c.acs5.state_place((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
     "                          \"B19301_001E\",\n",
     "                          \"B17001_002E\",\n",
-    "                          \"B23025_005E\"), {'for': 'state:*'})\n",
-    "\n",
+    "                          \"B23025_005E\"),'01','07000')\n",
     "\n",
     "# Convert to DataFrame\n",
-    "census_pd = pd.DataFrame(census_data)\n",
+    "census_pd = pd.DataFrame(census_data_test)\n",
+    "# census_pd.head()\n",
     "\n",
     "# Column Reordering\n",
     "census_pd = census_pd.rename(columns={\"B01003_001E\": \"Population\",\n",
