census loop still not working

--- a/Dataframe_With_Weather.ipynb
+++ b/Dataframe_With_Weather.ipynb
@@ -1856,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
        "7779  151000.0       01  51000.0  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2072,6 +2072,9 @@
     "# Add Result to DataFrame\n",
     "census_cities_df[\"State ID\"] = state_ID_series\n",
     "census_cities_df[\"Place ID\"] = place_ID_series\n",
+    "\n",
+    "# Make Smaller DataFrame for testing\n",
+    "census_cities_df_head = census_cities_df.head()\n",
     "census_cities_df.head()\n",
     "    "
    ]
@@ -2086,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2149,7 @@
        "0            19650.0        62258.0     29.326173           7.252644  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2165,6 +2168,97 @@
     "census_pd = pd.DataFrame(census_data_test)\n",
     "# census_pd.head()\n",
     "\n",
+    "# Column Reordering\n",
+    "census_pd = census_pd.rename(columns={\"B01003_001E\": \"Population\",\n",
+    "                                      \"B01002_001E\": \"Median Age\",\n",
+    "                                      \"B19013_001E\": \"Household Income\",\n",
+    "                                      \"B19301_001E\": \"Per Capita Income\",\n",
+    "                                      \"B17001_002E\": \"Poverty Count\",\n",
+    "                                      \"B23025_005E\": \"Unemployment Count\",\n",
+    "                                      \"NAME\": \"Name\", \"state\": \"State\"})\n",
+    "\n",
+    "# Add in Poverty Rate (Poverty Count / Population)\n",
+    "census_pd[\"Poverty Rate\"] = 100 * \\\n",
+    "    census_pd[\"Poverty Count\"].astype(\n",
+    "        int) / census_pd[\"Population\"].astype(int)\n",
+    "\n",
+    "# Add in Employment Rate (Employment Count / Population)\n",
+    "census_pd[\"Unemployment Rate\"] = 100 * \\\n",
+    "    census_pd[\"Unemployment Count\"].astype(\n",
+    "        int) / census_pd[\"Population\"].astype(int)\n",
+    "\n",
+    "# Final DataFrame\n",
+    "census_pd = census_pd[[\"State\", \"Name\", \"Population\", \"Median Age\", \"Household Income\",\n",
+    "                       \"Per Capita Income\", \"Poverty Count\", \"Poverty Rate\", \"Unemployment Rate\"]]\n",
+    "\n",
+    "census_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# An attempt at adding the loop didn't work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01\n",
+      "07000.0\n",
+      "01\n",
+      "35896.0\n",
+      "01\n",
+      "37000.0\n",
+      "01\n",
+      "50000.0\n",
+      "01\n",
+      "51000.0\n",
+      "\n",
+      "[['01', '07000.0'], ['01', '35896.0'], ['01', '37000.0'], ['01', '50000.0'], ['01', '51000.0']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "census_data_test_single = c.acs5.state_place('NAME','01','07000')\n",
+    "census_pd_test = pd.DataFrame(census_data_test_single)\n",
+    "\n",
+    "census_data_test = []\n",
+    "\n",
+    "# TODO: just feed \"State ID\" in where '01' is and \"Place ID\" where '07000' is\n",
+    "for index, row in census_cities_df_head.iterrows():\n",
+    "    state_id_query = row['State ID']\n",
+    "    place_id_query = row['Place ID']\n",
+    "    # Add the following line back in to see if the loop works\n",
+    "#     census_data_test = c.acs5.state_place((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\", \"B19301_001E\", \"B17001_002E\", \"B23025_005E\"),state_id_query,place_id_query)\n",
+    "#     census_data_test.append([c.acs5.state_place((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\", \"B19301_001E\", \"B17001_002E\", \"B23025_005E\"),state_id_query,place_id_query)])\n",
+    "    \n",
+    "#     # Code just to prove the loop works\n",
+    "#     census_data_test.append([state_id_query, place_id_query])\n",
+    "    \n",
+    "    print(state_id_query)\n",
+    "    print(place_id_query)\n",
+    "\n",
+    "print(\"\")\n",
+    "print(census_data_test)\n",
+    "# Convert to DataFrame\n",
+    "# census_pd = pd.DataFrame(census_data_test)\n",
+    "# census_pd.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Column Reordering\n",
     "census_pd = census_pd.rename(columns={\"B01003_001E\": \"Population\",\n",
     "                                      \"B01002_001E\": \"Median Age\",\n",
