--- a/Dataframe_With_Weather.ipynb
+++ b/Dataframe_With_Weather.ipynb
@@ -2203,12 +2203,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Census API Loop"
+    "# Census API Loop\n",
+    "## I've got it working "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2227,7 @@
       "01\n",
       "51000\n",
       "\n",
-      "[[[{'NAME': 'Birmingham city, Alabama', 'B19013_001E': 31445.0, 'B01003_001E': 212295.0, 'B01002_001E': 35.9, 'B19301_001E': 19650.0, 'B17001_002E': 62258.0, 'B23025_005E': 15397.0, 'state': '01', 'place': '07000'}]], [[{'NAME': 'Hoover city, Alabama', 'B19013_001E': 75020.0, 'B01003_001E': 82264.0, 'B01002_001E': 36.7, 'B19301_001E': 38457.0, 'B17001_002E': 5537.0, 'B23025_005E': 2795.0, 'state': '01', 'place': '35896'}]], [[{'NAME': 'Huntsville city, Alabama', 'B19013_001E': 48881.0, 'B01003_001E': 182317.0, 'B01002_001E': 36.7, 'B19301_001E': 30916.0, 'B17001_002E': 29494.0, 'B23025_005E': 11036.0, 'state': '01', 'place': '37000'}]], [[{'NAME': 'Mobile city, Alabama', 'B19013_001E': 38644.0, 'B01003_001E': 195116.0, 'B01002_001E': 35.5, 'B19301_001E': 23385.0, 'B17001_002E': 43928.0, 'B23025_005E': 12229.0, 'state': '01', 'place': '50000'}]], [[{'NAME': 'Montgomery city, Alabama', 'B19013_001E': 43702.0, 'B01003_001E': 204760.0, 'B01002_001E': 34.2, 'B19301_001E': 24365.0, 'B17001_002E': 44774.0, 'B23025_005E': 8940.0, 'state': '01', 'place': '51000'}]]]\n"
+      "[{'NAME': 'Montgomery city, Alabama', 'B19013_001E': 43702.0, 'B01003_001E': 204760.0, 'B01002_001E': 34.2, 'B19301_001E': 24365.0, 'B17001_002E': 44774.0, 'B23025_005E': 8940.0, 'state': '01', 'place': '51000'}]\n"
      ]
     },
     {
@@ -2250,44 +2251,155 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>B01002_001E</th>\n",
+       "      <th>B01003_001E</th>\n",
+       "      <th>B17001_002E</th>\n",
+       "      <th>B19013_001E</th>\n",
+       "      <th>B19301_001E</th>\n",
+       "      <th>B23025_005E</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>place</th>\n",
+       "      <th>state</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[{'NAME': 'Birmingham city, Alabama', 'B19013_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[{'NAME': 'Hoover city, Alabama', 'B19013_001E...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[{'NAME': 'Huntsville city, Alabama', 'B19013_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[{'NAME': 'Mobile city, Alabama', 'B19013_001E...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[{'NAME': 'Montgomery city, Alabama', 'B19013_...</td>\n",
+       "      <td>34.2</td>\n",
+       "      <td>204760.0</td>\n",
+       "      <td>44774.0</td>\n",
+       "      <td>43702.0</td>\n",
+       "      <td>24365.0</td>\n",
+       "      <td>8940.0</td>\n",
+       "      <td>Montgomery city, Alabama</td>\n",
+       "      <td>51000</td>\n",
+       "      <td>01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   0\n",
-       "0  [{'NAME': 'Birmingham city, Alabama', 'B19013_...\n",
-       "1  [{'NAME': 'Hoover city, Alabama', 'B19013_001E...\n",
-       "2  [{'NAME': 'Huntsville city, Alabama', 'B19013_...\n",
-       "3  [{'NAME': 'Mobile city, Alabama', 'B19013_001E...\n",
-       "4  [{'NAME': 'Montgomery city, Alabama', 'B19013_..."
+       "   B01002_001E  B01003_001E  B17001_002E  B19013_001E  B19301_001E  \\\n",
+       "0         34.2     204760.0      44774.0      43702.0      24365.0   \n",
+       "\n",
+       "   B23025_005E                      NAME  place state  \n",
+       "0       8940.0  Montgomery city, Alabama  51000    01  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Census API proof that one data point submission works\n",
+    "# census_data_test_single = c.acs5.state_place('NAME','01','07000')\n",
+    "# census_pd_test = pd.DataFrame(census_data_test_single)\n",
+    "\n",
+    "census_data_test = []\n",
+    "\n",
+    "for index, row in census_cities_df_head.iterrows():\n",
+    "    state_id_query = row['State ID']\n",
+    "    place_id_query = row['Place ID']\n",
+    "    place_id_query = place_id_query.replace(\".0\",\"\")\n",
+    "    \n",
+    "    # Add the following line back in to see if the loop works\n",
+    "    census_data_test = c.acs5.state_place((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\", \"B19301_001E\", \"B17001_002E\", \"B23025_005E\"),state_id_query,place_id_query)\n",
+    "#     census_data_test.append(census_data_test)\n",
+    "\n",
+    "    print(state_id_query)\n",
+    "    print(place_id_query)\n",
+    "\n",
+    "print(\"\")\n",
+    "print(census_data_test)\n",
+    "\n",
+    "# # Convert to DataFrame\n",
+    "census_pd = pd.DataFrame(census_data_test)\n",
+    "census_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01\n",
+      "07000\n",
+      "01\n",
+      "35896\n",
+      "01\n",
+      "37000\n",
+      "01\n",
+      "50000\n",
+      "01\n",
+      "51000\n",
+      "\n",
+      "[{'NAME': 'Montgomery city, Alabama', 'B19013_001E': 43702.0, 'B01003_001E': 204760.0, 'B01002_001E': 34.2, 'B19301_001E': 24365.0, 'B17001_002E': 44774.0, 'B23025_005E': 8940.0, 'state': '01', 'place': '51000'}]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B01002_001E</th>\n",
+       "      <th>B01003_001E</th>\n",
+       "      <th>B17001_002E</th>\n",
+       "      <th>B19013_001E</th>\n",
+       "      <th>B19301_001E</th>\n",
+       "      <th>B23025_005E</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>place</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>34.2</td>\n",
+       "      <td>204760.0</td>\n",
+       "      <td>44774.0</td>\n",
+       "      <td>43702.0</td>\n",
+       "      <td>24365.0</td>\n",
+       "      <td>8940.0</td>\n",
+       "      <td>Montgomery city, Alabama</td>\n",
+       "      <td>51000</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   B01002_001E  B01003_001E  B17001_002E  B19013_001E  B19301_001E  \\\n",
+       "0         34.2     204760.0      44774.0      43702.0      24365.0   \n",
+       "\n",
+       "   B23025_005E                      NAME  place state  \n",
+       "0       8940.0  Montgomery city, Alabama  51000    01  "
+      ]
+     },
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2296,17 +2408,40 @@
     "census_data_test_single = c.acs5.state_place('NAME','01','07000')\n",
     "census_pd_test = pd.DataFrame(census_data_test_single)\n",
     "\n",
-    "census_data_test = []\n",
+    "# census_data_test = []\n",
+    "census_results_df = []\n",
     "\n",
-    "# TODO: just feed \"State ID\" in where '01' is and \"Place ID\" where '07000' is\n",
+    "census_results_df = census_cities_df_head\n",
+    "# census_results_df[\"A\"] = \"\"\n",
+    "# census_results_df[\"B\"] = \"\"\n",
+    "# census_results_df[\"C\"] = \"\"\n",
+    "# census_results_df[\"D\"] = \"\"\n",
+    "# census_results_df[\"E\"] = \"\"\n",
+    "# census_results_df[\"F\"] = \"\"\n",
+    "# census_results_df[\"G\"] = \"\"\n",
+    "# census_results_df[\"H\"] = \"\"\n",
+    "# census_results_df[\"I\"] = \"\"\n",
+    "\n",
+    "census_results_df.head()\n",
+    "\n",
     "for index, row in census_cities_df_head.iterrows():\n",
     "    state_id_query = row['State ID']\n",
     "    place_id_query = row['Place ID']\n",
     "    place_id_query = place_id_query.replace(\".0\",\"\")\n",
+    "    \n",
+    "    \n",
     "    # Add the following line back in to see if the loop works\n",
-    "#     census_data_test = c.acs5.state_place((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\", \"B19301_001E\", \"B17001_002E\", \"B23025_005E\"),state_id_query,place_id_query)\n",
-    "    census_data_test.append([c.acs5.state_place((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\", \"B19301_001E\", \"B17001_002E\", \"B23025_005E\"),state_id_query,place_id_query)])\n",
-    "\n",
+    "    census_data_test = c.acs5.state_place((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\", \"B19301_001E\", \"B17001_002E\", \"B23025_005E\"),state_id_query,place_id_query)\n",
+    "#     census_data_test.append([c.acs5.state_place((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\", \"B19301_001E\", \"B17001_002E\", \"B23025_005E\"),state_id_query,place_id_query)])\n",
+    "    \n",
+    "#     # Trying to make this a DataFrame with .loc\n",
+    "#     census_results_df.loc[index, \"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\"] = c.acs5.state_place((\"NAME\", \n",
+    "#                                                  \"B19013_001E\", \n",
+    "#                                                  \"B01003_001E\", \n",
+    "#                                                  \"B01002_001E\", \n",
+    "#                                                  \"B19301_001E\", \n",
+    "#                                                  \"B17001_002E\", \n",
+    "#                                                  \"B23025_005E\"),state_id_query,place_id_query)\n",
     "#     # Code just to prove the loop works\n",
     "#     census_data_test.append([state_id_query, place_id_query])\n",
     "    \n",
@@ -2316,9 +2451,11 @@
     "print(\"\")\n",
     "print(census_data_test)\n",
     "\n",
-    "# Convert to DataFrame\n",
+    "# # Convert to DataFrame\n",
     "census_pd = pd.DataFrame(census_data_test)\n",
     "census_pd.head()\n",
+    "\n",
+    "# census_results_df.head()\n",
     "\n"
    ]
   },
@@ -2331,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2392,7 +2529,7 @@
        "4  [{'NAME': 'Montgomery city, Alabama', 'B19013_..."
       ]
      },
-     "execution_count": 148,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2400,7 +2537,7 @@
    "source": [
     "# Convert to DataFrame\n",
     "census_pd = pd.DataFrame.from_records(census_data_test)\n",
-    "census_pd.head()"
+    "census_pd"
    ]
   },
   {
