--- a/Dataframe_With_Weather.ipynb
+++ b/Dataframe_With_Weather.ipynb
@@ -2204,7 +2204,7 @@
    "metadata": {},
    "source": [
     "# Census API Loop\n",
-    "## I've got it working "
+    "## I've got it turned into a dataframe, but only for the last iteration of the loop"
    ]
   },
   {
