--- a/whydoesn'tthiswork.ipynb
+++ b/whydoesn'tthiswork.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -20,6 +21,53 @@
      "text": [
       "This is the example data\n",
       "[[{'NAME': 'Birmingham city, Alabama', 'B19013_001E': 31445.0, 'B01003_001E': 212295.0, 'B01002_001E': 35.9, 'B19301_001E': 19650.0, 'B17001_002E': 62258.0, 'B23025_005E': 15397.0, 'state': '01', 'place': '07000'}], [{'NAME': 'Hoover city, Alabama', 'B19013_001E': 75020.0, 'B01003_001E': 82264.0, 'B01002_001E': 36.7, 'B19301_001E': 38457.0, 'B17001_002E': 5537.0, 'B23025_005E': 2795.0, 'state': '01', 'place': '35896'}], [{'NAME': 'Huntsville city, Alabama', 'B19013_001E': 48881.0, 'B01003_001E': 182317.0, 'B01002_001E': 36.7, 'B19301_001E': 30916.0, 'B17001_002E': 29494.0, 'B23025_005E': 11036.0, 'state': '01', 'place': '37000'}], [{'NAME': 'Mobile city, Alabama', 'B19013_001E': 38644.0, 'B01003_001E': 195116.0, 'B01002_001E': 35.5, 'B19301_001E': 23385.0, 'B17001_002E': 43928.0, 'B23025_005E': 12229.0, 'state': '01', 'place': '50000'}], [{'NAME': 'Montgomery city, Alabama', 'B19013_001E': 43702.0, 'B01003_001E': 204760.0, 'B01002_001E': 34.2, 'B19301_001E': 24365.0, 'B17001_002E': 44774.0, 'B23025_005E': 8940.0, 'state': '01', 'place': '51000'}]]\n",
+      "\n",
+      "Pretty print of example data\n",
+      "[[{'B01002_001E': 35.9,\n",
+      "   'B01003_001E': 212295.0,\n",
+      "   'B17001_002E': 62258.0,\n",
+      "   'B19013_001E': 31445.0,\n",
+      "   'B19301_001E': 19650.0,\n",
+      "   'B23025_005E': 15397.0,\n",
+      "   'NAME': 'Birmingham city, Alabama',\n",
+      "   'place': '07000',\n",
+      "   'state': '01'}],\n",
+      " [{'B01002_001E': 36.7,\n",
+      "   'B01003_001E': 82264.0,\n",
+      "   'B17001_002E': 5537.0,\n",
+      "   'B19013_001E': 75020.0,\n",
+      "   'B19301_001E': 38457.0,\n",
+      "   'B23025_005E': 2795.0,\n",
+      "   'NAME': 'Hoover city, Alabama',\n",
+      "   'place': '35896',\n",
+      "   'state': '01'}],\n",
+      " [{'B01002_001E': 36.7,\n",
+      "   'B01003_001E': 182317.0,\n",
+      "   'B17001_002E': 29494.0,\n",
+      "   'B19013_001E': 48881.0,\n",
+      "   'B19301_001E': 30916.0,\n",
+      "   'B23025_005E': 11036.0,\n",
+      "   'NAME': 'Huntsville city, Alabama',\n",
+      "   'place': '37000',\n",
+      "   'state': '01'}],\n",
+      " [{'B01002_001E': 35.5,\n",
+      "   'B01003_001E': 195116.0,\n",
+      "   'B17001_002E': 43928.0,\n",
+      "   'B19013_001E': 38644.0,\n",
+      "   'B19301_001E': 23385.0,\n",
+      "   'B23025_005E': 12229.0,\n",
+      "   'NAME': 'Mobile city, Alabama',\n",
+      "   'place': '50000',\n",
+      "   'state': '01'}],\n",
+      " [{'B01002_001E': 34.2,\n",
+      "   'B01003_001E': 204760.0,\n",
+      "   'B17001_002E': 44774.0,\n",
+      "   'B19013_001E': 43702.0,\n",
+      "   'B19301_001E': 24365.0,\n",
+      "   'B23025_005E': 8940.0,\n",
+      "   'NAME': 'Montgomery city, Alabama',\n",
+      "   'place': '51000',\n",
+      "   'state': '01'}]]\n",
       "\n",
       "from records\n",
       "                                                   0\n",
@@ -43,14 +91,80 @@
       "1  {'NAME': 'Hoover city, Alabama', 'B19013_001E'...\n",
       "2  {'NAME': 'Huntsville city, Alabama', 'B19013_0...\n",
       "3  {'NAME': 'Mobile city, Alabama', 'B19013_001E'...\n",
-      "4  {'NAME': 'Montgomery city, Alabama', 'B19013_0...\n"
+      "4  {'NAME': 'Montgomery city, Alabama', 'B19013_0...\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'NAME': 'Birmingham city, Alabama', 'B19013_0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'NAME': 'Hoover city, Alabama', 'B19013_001E'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'NAME': 'Huntsville city, Alabama', 'B19013_0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'NAME': 'Mobile city, Alabama', 'B19013_001E'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'NAME': 'Montgomery city, Alabama', 'B19013_0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0\n",
+       "0  {'NAME': 'Birmingham city, Alabama', 'B19013_0...\n",
+       "1  {'NAME': 'Hoover city, Alabama', 'B19013_001E'...\n",
+       "2  {'NAME': 'Huntsville city, Alabama', 'B19013_0...\n",
+       "3  {'NAME': 'Mobile city, Alabama', 'B19013_001E'...\n",
+       "4  {'NAME': 'Montgomery city, Alabama', 'B19013_0..."
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "example_data = [[{'NAME': 'Birmingham city, Alabama', 'B19013_001E': 31445.0, 'B01003_001E': 212295.0, 'B01002_001E': 35.9, 'B19301_001E': 19650.0, 'B17001_002E': 62258.0, 'B23025_005E': 15397.0, 'state': '01', 'place': '07000'}], [{'NAME': 'Hoover city, Alabama', 'B19013_001E': 75020.0, 'B01003_001E': 82264.0, 'B01002_001E': 36.7, 'B19301_001E': 38457.0, 'B17001_002E': 5537.0, 'B23025_005E': 2795.0, 'state': '01', 'place': '35896'}], [{'NAME': 'Huntsville city, Alabama', 'B19013_001E': 48881.0, 'B01003_001E': 182317.0, 'B01002_001E': 36.7, 'B19301_001E': 30916.0, 'B17001_002E': 29494.0, 'B23025_005E': 11036.0, 'state': '01', 'place': '37000'}], [{'NAME': 'Mobile city, Alabama', 'B19013_001E': 38644.0, 'B01003_001E': 195116.0, 'B01002_001E': 35.5, 'B19301_001E': 23385.0, 'B17001_002E': 43928.0, 'B23025_005E': 12229.0, 'state': '01', 'place': '50000'}], [{'NAME': 'Montgomery city, Alabama', 'B19013_001E': 43702.0, 'B01003_001E': 204760.0, 'B01002_001E': 34.2, 'B19301_001E': 24365.0, 'B17001_002E': 44774.0, 'B23025_005E': 8940.0, 'state': '01', 'place': '51000'}]]\n",
     "print(\"This is the example data\")\n",
     "print(example_data)\n",
+    "print(\"\")\n",
+    "print(\"Pretty print of example data\")\n",
+    "pprint(example_data)\n",
     "print(\"\")\n",
     "\n",
     "# # Convert to DataFrame\n",
@@ -66,6 +180,11 @@
     "print(\"\")\n",
     "print(\"regular\")\n",
     "print(census_data_test_regular)\n",
+    "print(\"\")\n",
+    "\n",
+    "# Double convert\n",
+    "double_convert = pd.DataFrame.from_records(census_data_test_fromrecords)\n",
+    "double_convert\n",
     "\n"
    ]
   }
