--- a/Dataframe_With_Weather.ipynb
+++ b/Dataframe_With_Weather.ipynb
@@ -7052,10 +7052,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Merged dataframe to CSV\n",
+    "merged_wc5.to_csv(\"output/merged_wc5.csv\")"
+   ]
   }
  ],
  "metadata": {
