--- a/Dataframe_With_Weather.ipynb
+++ b/Dataframe_With_Weather.ipynb
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "7779  151000.0  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3078,7 +3078,7 @@
    "cell_type": "code",
    "execution_count": 185,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3197,7 +3197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4618,7 +4618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -4741,7 +4741,7 @@
        "4       8940.0  Montgomery city, Alabama  51000    01  "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
