Not much really

--- a/Vizes.ipynb
+++ b/Vizes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,15 @@
     "import os\n",
     "import numpy as np\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1302,7 +1303,9 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1423,6 +1426,13 @@
     "sleep_data_df= sleep_data_df.rename(columns={\"City_x\":\"City\",\"State_x\":\"State\", \"Population_x\":\"Population\"})\n",
     "sleep_data_df= sleep_data_df[[\"City\", \"State\",\"CityFIPS\",\"Population\",\"Sleep <7 hours %\",\"Stroke %\", \"CHD %\", \"Diabetes %\"]]\n",
     "sleep_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building Sleep Vizes"
    ]
   },
   {
